# FakeMicWavPlayer

./: .clang-tidy  .travis.yml  CallBacks.cpp  FakeLib.c  FakeLib.h  FakeLib2.cpp  FakeLibImplementation.cpp  FakeMicWavPlayerLib.cpp  Makefile  README.md  format.sh  help.h  main.c  main.cpp  meson.build  player.c  player.cpp  player.h
code-style/: :  shell.nix
docs/: FakeMicWavPlayer.1
include/: CallBacks.h  FakeLib.h  FakeLibImplementation.h  FakeLibUtils.hpp  FakeMicWavPlayerLib.h  player.h
pkg-config/: fake.pc  fakemicwavplayer.pc
subprojects/OggPlayer/: OggPlayer.cpp  main.cpp  meson.build  ogg.cpp  pa_player.cpp
subprojects/OggPlayer/include/: OggPlayer.h  ogg.h  pa_player.h
subprojects/OggPlayer/pkg-config/: oggplayer.pc
